# sonarqube-test-repo

./: .gitignore  BadCode.cs  BadCode.java  README.md  badCode.js  bad_code.py  pyproject.toml  sonar-project.properties
.github/workflows/: sonarqube.yml
src/: __init__.py  calculator.py
tests/: __init__.py  test_calculator.py
