[project]
name = "sonarqube-test-repo"
version = "0.1.0"
description = "A test repository for SonarQube and GitHub Actions integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Çağatay ÜRESİN"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
